<resources>
    <string name="app_name">WeatherApp</string>
    <string name="loading">Loading</string>

    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="city_name_empty">City Name empty.</string>
    <string name="city_already_available">City Already Available.</string>
    <string name="delete_city_failed">Delete city failed.</string>
    <string name="add_city_failed">Add city failed</string>
    <string name="add_city_header"> Add City</string>
    <string name="add_city_message"> Type the city you want to add</string>

</resources>
